--- a/projetos javascript/index.html
+++ b/projetos javascript/index.html
@@ -33,10 +33,10 @@
 
         <label>
             Valor
-            <input placeholder="R$ 10.000,00">
+            <input class="input-currency" placeholder="R$ 10.000,00">
         </label>
 
-        <button>Converter</button>
+        <button onclick="convertValues()" class="convert-button">Converter</button>
 
         <section id="section1">
             <div class="currency-box">
